--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -14,7 +14,7 @@
     mode: 'u=rw,g=r,o=r'
 
 - name: Copy bashrc configuration to admin users
-  copy:
+  template:
     src: 'files/bashrc'
     dest: '/home/{{ item }}/.bashrc'
     owner: '{{ item }}'
