--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -28,6 +28,17 @@
   with_items: '{{ admins }}'
   when: admins is defined
 
+- name: Copy bashrc configuration to non admin users
+  become: yes
+  template:
+    src: 'templates/bashrc'
+    dest: '/home/{{ item }}/.bashrc'
+    owner: '{{ item }}'
+    group: '{{ item }}'
+    mode: 'u=rw,g=r,o='
+  with_items: '{{ user }}'
+  when: user is defined
+
 - name: Copy vimrc configuration to root
   become: yes
   copy:
@@ -36,6 +47,17 @@
     owner: root
     group: root
     mode: 'u=rw,g=r,o='
+
+- name: Copy vimrc configuration to non admin users
+  become: yes
+  copy:
+    src: 'templates/vimrc'
+    dest: '/home/{{ item }}/.vimrc'
+    owner: '{{ item }}'
+    group: '{{ item }}'
+    mode: 'u=rw,g=r,o='
+  with_items: "{{ user }}"
+  when: user is defined
 
 - name: Copy vimrc configuration to admin users
   become: yes
