--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,4 +1,37 @@
 ---
+- name: Create directory for versionscheck
+  become: true
+  file:
+    path: '/etc/ansible-version'
+    state: directory
+    mode: 0755
+  when: submodules_versioncheck
+
+- name: check playbook version
+  become: true
+  slurp:
+    src: "{{ playbook_version_path }}"
+  register: playbook_version 
+  when: submodules_versioncheck
+  ignore_errors: yes
+
+- name: Print version
+  debug:
+    msg: "Remote playbook version: '{{ playbook_version.content | default('Y3VycmVudGx5IG5vdCBkZXBsb3llZAo=') | b64decode | string }}'. Local playbook version: '{{ playbook_version_number|string }}'."
+  when: submodules_versioncheck
+
+- name: Check if your version is outdated
+  fail:
+    msg: "Your current ansible module has the version '{{ playbook_version_number }}' and is outdated. Please update it at least to version '{{ playbook_version.content | default('Y3VycmVudGx5IG5vdCBkZXBsb3llZAo=') | b64decode }}'!"
+  when: 
+    - playbook_version.content|default("Mgo=")|b64decode|int - 1 >= playbook_version_number|int and submodules_versioncheck 
+
+- name: write new version to remote disk
+  become: true
+  copy:
+    content: "{{ playbook_version_number }}"
+    dest: "{{ playbook_version_path }}"
+  when: submodules_versioncheck
 
 - name: install the latest libselinux-python package
   become: yes
@@ -56,8 +89,8 @@
     owner: '{{ item }}'
     group: '{{ item }}'
     mode: 'u=rw,g=r,o='
-  with_items: '{{ user }}'
-  when: user is defined
+  with_items: '{{ accounts }}'
+  when: accounts is defined
 
 - name: Copy vimrc configuration to root
   become: yes
@@ -76,8 +109,8 @@
     owner: '{{ item }}'
     group: '{{ item }}'
     mode: 'u=rw,g=r,o='
-  with_items: "{{ user }}"
-  when: user is defined
+  with_items: "{{ accounts }}"
+  when: accounts is defined
 
 - name: Copy vimrc configuration to admin users
   become: yes
