--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,41 +1,5 @@
 ---
-- name: Create directory for versionscheck
-  become: yes
-  file:
-    path: '/etc/ansible-version'
-    state: directory
-    mode: 0755
-  when: submodules_versioncheck|bool
-
-- name: check playbook version
-  become: yes
-  slurp:
-    src: "{{ playbook_version_path }}"
-  register: playbook_version
-  when: submodules_versioncheck|bool
-  ignore_errors: yes
-
-- name: Print local version
-  debug:
-    msg: "Local role version: '{{ playbook_version_number|string }}'."
-  when: submodules_versioncheck|bool
-
-- name: Print remote version
-  debug:
-    msg: "Remote role  version: '{{ playbook_version.content | default('Y3VycmVudGx5IG5vdCBkZXBsb3llZAo=') | b64decode | string }}'."
-  when: submodules_versioncheck|bool
-
-- name: Check if your version is outdated
-  fail:
-    msg: "Your current ansible module has the version '{{ playbook_version_number }}' and is outdated. Please update it!"
-  when:
-    - playbook_version.content|default("Mgo=")|b64decode|int - 1 >= playbook_version_number|int and submodules_versioncheck|bool
-
-- name: write new version to remote disk
-  become: yes
-  copy:
-    content: "{{ playbook_version_number }}"
-    dest: "{{ playbook_version_path }}"
+- include_tasks: versioncheck.yml
   when: submodules_versioncheck|bool
 
 - name: install the latest libselinux-python package
