Andible update accounts variable

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -16,3 +16,7 @@ submodules_versioncheck: true
 
 # show hidden files in ranger
 ranger_hidden_files: true
+
+# affected user accounts
+accounts:
+  - "{{ ansible_user_id }}"
