--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -22,5 +22,5 @@ accounts:
   - "{{ ansible_user_id }}"
 
 # some additional aliases
-it_pull_alias: false
+git_pull_alias: false
 git_typo_alias: true
