fix another typo

--- a/tasks/basic-selinux.yml
+++ b/tasks/basic-selinux.yml
@@ -3,8 +3,7 @@
   become: yes
   dnf:
     name: libselinux-python
-    state: latest
+    state: present
   when:
    - ansible_distribution == "Fedora"
-
-
+  failed_when: false
