--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -36,10 +36,14 @@ base__history_control: 'ignoreboth'
 base__history_size: '-1'
 base__history_file_size: '-1'
 
-# optional additional entries to bashrc
+# optional additional entries to /etc/bash.bashrc
 base__additional_bashrc_lines: []
 # - eval `foo`
 # - tmux new-session
+
+# optional additional entries to ~/.bashrc
+base__additional_user_bashrc_lines: []
+#  - eval $(keychain --eval --quiet id_ed25519)
 
 # optionally allow custom bashrc for root
 base__allow_own_root_bashrc: false
