--- a/.travis.yml
+++ b/.travis.yml
@@ -1,36 +1,29 @@
 ---
-sudo: required
+# OS Details
+os: linux
+language: python
+python: '3.8'
 
-env:
-  - distribution: centos
-    version: 7
-  - distribution: fedora
-    version: 29
-  - distribution: fedora
-    version: 28
-  - distribution: ubuntu
-    version: bionic
-  - distribution: ubuntu
-    version: xenial
-  - distribution: ubuntu
-    version: trusty
-  - distribution: debian
-    version: stretch
-services:
-  - docker
-before_install:
-  - 'sudo docker pull ${distribution}:${version}'
-  - 'sudo docker build --no-cache --rm --file=travis/Dockerfile.${distribution}-${version} --tag=${distribution}-${version}:ansible travis'
+cache:
+  pip: true
+
+# Install ansible and ansible-lint
+install:
+  - pip install ansible
+  - pip install ansible-lint
+
+# testing galaxy install and ansible lint
+# more advanced testing is currently handled with
+#  github actions. The gh-actions for our test are there:
+#  https://github.com/roles-ansible and are tagged
+#  with 'github-actions'  --> https://github.com/search?q=topic%3Agithub-actions+org%3Aroles-ansible&type=Repositories
 script:
-  - container_id=$(mktemp)
-  - 'sudo docker run --detach --privileged -v /sys/fs/cgroup:/sys/fs/cgroup:ro --volume="${PWD}":/etc/ansible/roles/travis_test:ro ${distribution}-${version}:ansible > "${container_id}"'
-  - 'sudo docker exec "$(cat ${container_id})" env ANSIBLE_FORCE_COLOR=1 ansible-playbook -v /etc/ansible/roles/travis_test/travis/test.yml --syntax-check'
-  - 'sudo docker exec "$(cat ${container_id})" env ANSIBLE_FORCE_COLOR=1 ansible-playbook -v /etc/ansible/roles/travis_test/travis/test.yml'
-  - >
-    sudo docker exec "$(cat ${container_id})" env ANSIBLE_FORCE_COLOR=1 ansible-playbook -v /etc/ansible/roles/travis_test/travis/test.yml
-    | grep -q 'changed=0.*failed=0'
-    && (echo 'Idempotence test: pass' && exit 0)
-    || (echo 'Idempotence test: fail' && exit 1)
-  - 'sudo docker rm -f "$(cat ${container_id})"'
+#  - ansible-galaxy install do1jlr.dotfiles
+  - ansible-lint .
+  - echo -e "\n\n\n\n\nWe use github actions for more detailed tests.\n\n\n\n\n"
+
 notifications:
-    webhooks: https://galaxy.ansible.com/api/v1/notifications/
+  webhooks: https://galaxy.ansible.com/api/v1/notifications/
+  email:
+    on_success: never
+    on_failure: always
