--- a/vars/main.yml
+++ b/vars/main.yml
@@ -1,2 +1,3 @@
-playbook_version_number: 2065 # should be over ninethousand
+---
+playbook_version_number: 2066  # should be increased integer
 playbook_version_path: 'role_dotfiles_chaos-bodensee_github.version'
