--- a/tasks/bashrc.yml
+++ b/tasks/bashrc.yml
@@ -1,6 +1,6 @@
 ---
 - name: Create a global bashrc configuration
-  become: yes
+  become: true
   template:
     src: 'templates/bash.bashrc'
     dest: '/etc/bash.bashrc'
@@ -9,7 +9,7 @@
     mode: 'u=rw,g=r,o=r'
 
 - name: Copy bashrc configuration to root
-  become: yes
+  become: true
   template:
     src: 'templates/bashrc'
     dest: '/root/.bashrc'
@@ -19,7 +19,7 @@
   when: not dotfiles__allow_own_root_bashrc | bool
 
 - name: Copy bashrc configuration to non admin users
-  become: yes
+  become: true
   template:
     src: 'templates/bashrc'
     dest: '/home/{{ item }}/.bashrc'
