--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -3,7 +3,9 @@
   when: submodules_versioncheck | bool
 
 - include_tasks: basic-selinux.yml
-  when: dotfiles__install_python_selinux | bool
+  when:
+    - dotfiles__install_python_selinux | bool
+    - ansible_distribution == "Fedora"
 
 - include_tasks: bashrc.yml
   when: dotfiles__modify_bashrc | bool
