--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,11 +1,11 @@
 ---
 galaxy_info:
-  author: L3D
+  author: do1jlr
   description: Deploy some dotfiles like .vimrc and .bashrc for all defined users
   role_name: dotfiles
   license: "MIT"
-  min_ansible_version: 2.3
-  github_branch: master
+  min_ansible_version: 2.11
+  github_branch: main
   platforms:
     - name: Archlinux
       versions: all
