--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,19 +1,26 @@
 ---
 galaxy_info:
+  role_name: dotfiles
   author: do1jlr
   description: Deploy some dotfiles like .vimrc and .bashrc for all defined users
-  role_name: dotfiles
   license: "MIT"
-  min_ansible_version: 2.11
+  min_ansible_version: "2.11"
   platforms:
-    - name: Archlinux
-      versions: all
     - name: Debian
-      versions: all
+      versions:
+        - all
     - name: Ubuntu
-      versions: all
+      versions:
+        - all
     - name: Fedora
-      versions: all
+      versions:
+        - all
+    - name: EL
+      versions:
+        - all
+    - name: ArchLinux
+      versions:
+        - all
   galaxy_tags:
     - dotfiles
     - bashrc
