--- a/.github/workflows/ansible-debian-sid.yml
+++ b/.github/workflows/ansible-debian-sid.yml
@@ -13,6 +13,6 @@ jobs:
         uses: actions/checkout@v3
 
       - name: 'ansible check with debian:sid'
-        uses: roles-ansible/check-ansible-debian-sid-action@master
+        uses: roles-ansible/check-ansible-debian-sid-action@test
         with:
           targets: "./"
