--- a/meta/main.yml
+++ b/meta/main.yml
@@ -4,19 +4,18 @@ galaxy_info:
   description: Deploy some dotfiles like .vimrc and .bashrc for all defined users
   role_name: dotfiles
   license: "MIT"
-  min_ansible_version: 2.11
+  min_ansible_version: '2.13'
   github_branch: main
   platforms:
-    - name: Archlinux
-      versions: all
+    - name: ArchLinux
+      versions: ['all']
     - name: Debian
-      versions: all
+      versions: ['all']
     - name: Ubuntu
-      versions: all
-    - name: Fedora
-      versions: all
+      versions: ['all']
   galaxy_tags:
     - dotfiles
     - bashrc
     - vimrc
+    - linux
 dependencies: []
