--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,24 +1,23 @@
 ---
-- name: rin optional versionscheck
-  ansible.builtin.include_tasks: versioncheck.yml
+- name: Run optional versionscheck
+  ansible.builtin.include_tasks:
+    file: 'versioncheck.yml'
   when: submodules_versioncheck | bool
 
-- name: try to install libselinux-python via dnf
-  ansible.builtin.include_tasks: basic-selinux.yml
-  when:
-    - dotfiles__install_python_selinux | bool
-    - ansible_distribution == "Fedora"
-
-- name: deploy .bashrc
-  ansible.builtin.include_tasks: bashrc.yml
+- name: Deploy .bashrc
+  ansible.builtin.include_tasks:
+    file: 'bashrc.yml'
   when: dotfiles__modify_bashrc | bool
 
-- name: deploy vimrc
-  ansible.builtin.include_tasks: vimrc.yml
+- name: Deploy vimrc
+  ansible.builtin.include_tasks:
+    file: 'vimrc.yml'
 
-- name: deploy ranger config
-  ansible.builtin.include_tasks: ranger.yml
+- name: Deploy ranger config
+  ansible.builtin.include_tasks:
+    file: 'ranger.yml'
 
-- name: deploy .tmux.conf
-  ansible.builtin.include_tasks: tmux.yml
+- name: Deploy .tmux.conf
+  ansible.builtin.include_tasks:
+    file: 'tmux.yml'
   when: dotfiles__modify_tmux | bool
