--- a/tasks/ranger.yml
+++ b/tasks/ranger.yml
@@ -1,20 +1,21 @@
 ---
-- name: create .config/ranger/ directory
+- name: Create .config/ranger/ directory
   become: true
   ansible.builtin.file:
     path: "/home/{{ item }}/.config/ranger"
     state: directory
     owner: "{{ item }}"
     group: "{{ item }}"
+    mode: '0644'
     recurse: true
-  with_items: "{{ accounts }}"
+  loop: "{{ accounts }}"
   when:
     - dotfiles__ranger_hidden_files | bool
     - accounts is defined
     - accounts != ['root']
     - accounts != 'root'
 
-- name: create .config/ranger/rc.conf file
+- name: Create .config/ranger/rc.conf file
   become: true
   ansible.builtin.template:
     src: templates/ranger_rc.conf.j2
@@ -22,7 +23,7 @@
     owner: "{{ item }}"
     group: "{{ item }}"
     mode: '0644'
-  with_items: "{{ accounts }}"
+  loop: "{{ accounts }}"
   when:
     - dotfiles__ranger_hidden_files | bool
     - accounts is defined
